--- a/modules/items/client/views/list-items.client.view.html
+++ b/modules/items/client/views/list-items.client.view.html
@@ -6,14 +6,16 @@
     <a data-ng-repeat="item in vm.items"
        data-ui-sref="items.view({ itemId: item._id })"
        class="list-group-item">
-      <small class="list-group-item-text">
-        Posted on
-        <span data-ng-bind="item.created | date:'mediumDate'"></span>
-        by
-        <span data-ng-if="item.user" data-ng-bind="item.user.displayName"></span>
-        <span data-ng-if="!item.user">Deleted User</span>
-      </small>
-      <h4 class="list-group-item-heading" data-ng-bind="item.name"></h4>
+      <div class="row">
+        <div class="col-sm-6">
+          <h4 class="list-group-item-heading" data-ng-bind="item.name"></h4>
+        </div>
+        <div class="col-sm-2" ng-bind="item.rarity"></div>
+        <div class="col-sm-2" ng-bind="item.classification"></div>
+        <div class="col-sm-2">
+          {{item.value}} riphons
+        </div>
+      </div>
     </a>
   </div>
   <div class="alert alert-warning text-center" data-ng-if="vm.items.$resolved && !vm.items.length">
