--- a/modules/characters/client/views/creationSteps/character.creation.inventory.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.inventory.view.html
@@ -1,1 +1,21 @@
-<h3>Inventory</h3>
+<div class="row">
+  <div class="col-sm-4"><b>Name</b></div>
+  <div class="col-sm-3"><b>Type</b></div>
+  <div class="col-sm-3"><b>Raw Value</b></div>
+</div>
+
+<div class="list-group">
+  <div ng-repeat="item in vm.items" class="row list-group-item">
+    <div class="col-sm-4">
+      {{item.name}}
+    </div>
+    <div class="col-sm-3" ng-bind="item.classification"></div>
+    <div class="col-sm-3">{{item.value}} riphons</div>
+    <div class="col-sm-1">
+      <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+    </div>
+    <div class="col-sm-1">
+      <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+    </div>
+  </div>
+</div>
