--- a/modules/characters/client/views/creationSteps/character.creation.inventory.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.inventory.view.html
@@ -11,11 +11,18 @@
     </div>
     <div class="col-sm-3" ng-bind="item.classification"></div>
     <div class="col-sm-3">{{item.value}} riphons</div>
-    <div class="col-sm-1">
+    <div class="col-sm-1" ng-click="vm.infoItem = item">
       <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
     </div>
-    <div class="col-sm-1">
-      <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+    <div ng-if="vm.character.items.indexOf(item._id) === -1">
+      <div class="col-sm-1" ng-click="vm.addItem(item)">
+        <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+      </div>
+    </div>
+    <div ng-if="vm.character.items.indexOf(item._id) >-1">
+      <div class="col-sm-1" ng-click="vm.removeItem(item)">
+        <span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
+      </div>
     </div>
   </div>
 </div>
