Finally got the +/- signs to work correctly

--- a/modules/items/client/views/form-item.client.view.html
+++ b/modules/items/client/views/form-item.client.view.html
@@ -20,7 +20,7 @@
           <div class="col-sm-offset-1 col-sm-6">
             <div class="form-group" show-errors>
               <label class="control-label" for="creator">Creator</label>
-              <input creator="creator" type="text" ng-model="vm.item.creator" id="creator" class="form-control" placeholder="Creator" required>
+              <input creator="creator" type="text" ng-model="vm.item.creator" id="creator" class="form-control" placeholder="Creator">
               <div ng-messages="vm.form.itemForm.creator.$error" role="alert">
                 <p class="help-block error-text" ng-message="required">Item creator is required.</p>
               </div>
