--- a/modules/characters/client/views/creationSteps/character.creation.inventory.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.inventory.view.html
@@ -14,15 +14,10 @@
     <div class="col-sm-1" ng-click="vm.infoItem = item">
       <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
     </div>
-    <div ng-if="vm.character.items.indexOf(item._id) === -1">
-      <div class="col-sm-1" ng-click="vm.addItem(item)">
-        <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
-      </div>
-    </div>
-    <div ng-if="vm.character.items.indexOf(item._id) >-1">
-      <div class="col-sm-1" ng-click="vm.removeItem(item)">
-        <span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
-      </div>
+    <div class="col-sm-1" ng-click="vm.toggleItem(item)">
+      <span class="glyphicon"
+      ng-class="{'glyphicon-minus-sign': vm.character.items.indexOf(item._id) > -1, 'glyphicon-plus-sign': vm.character.items.indexOf(item._id) === -1}"
+      aria-hidden="true"></span>
     </div>
   </div>
 </div>
