--- a/modules/items/client/views/list-items.client.view.html
+++ b/modules/items/client/views/list-items.client.view.html
@@ -13,7 +13,7 @@
         <div class="col-sm-2" ng-bind="item.rarity"></div>
         <div class="col-sm-2" ng-bind="item.classification"></div>
         <div class="col-sm-2">
-          {{item.value}} riphons
+          {{item.price}} riphons
         </div>
       </div>
     </a>
