--- a/modules/characters/client/views/creationHelp/character.creation.attributes.help.view.html
+++ b/modules/characters/client/views/creationHelp/character.creation.attributes.help.view.html
@@ -1,8 +1,4 @@
-<ul>
-  <li><b>Strength</b> measures your character's muscle and physical power.</li>
-  <li><b>Dexterity</b> measures agility, reflexes, and balance.</li>
-  <li><b>Constitution</b> represents your character's health and stamina.</li>
-  <li><b>Intelligence</b> determines how well your character learns/reasons.</li>
-  <li><b>Wisdom</b> measures willpower, sense, and intuition.</li>
-  <li><b>Charisma</b> measures a character's force of personality upon others.</li>
-</u>
+<p>Here you will select how your attributes are distributed through the use of the point buy system, as well as choose in which skills your character will be proficient.</p>
+<br>
+<h4>Point Buy</h4>
+<p>All about point buy</p>
