--- a/modules/characters/client/views/form-character.client.view.html
+++ b/modules/characters/client/views/form-character.client.view.html
@@ -31,10 +31,10 @@
               <button type="button" ng-disabled="vm.step === 0" class="btn btn-default" ng-click="vm.previousStep()">Back</button>
             </div>
             <div class="col-sm-3 col-sm-offset-2">
-              <div ng-show="vm.step !== 4">
+              <div ng-show="vm.step !== vm.creationSteps.length-1">
                 <button type="button" class="btn btn-default" ng-click="vm.nextStep()">Next</button>
               </div>
-              <div ng-show="vm.step === 4">
+              <div ng-show="vm.step === vm.creationSteps.length-1">
                 <div class="form-group">
                   <button type="submit" class="btn btn-default">{{vm.character._id ? 'Update' : 'Create'}}</button>
                 </div>
