--- a/modules/configurations/client/css/configuration.css
+++ b/modules/configurations/client/css/configuration.css
@@ -5,3 +5,13 @@
 .collapsed-entry {
   display: none;
 }
+
+.proficiency-tag {
+  box-sizing: border-box;
+  background-color: #dcddde;
+  color: #58595b;
+  margin: 0 4px 4px 0;
+  padding: 1px 5px 2px 5px;
+  line-height: 8px;
+  font-size: 14px;
+}
