--- a/modules/configurations/client/views/form-configuration-classes.client.view.html
+++ b/modules/configurations/client/views/form-configuration-classes.client.view.html
@@ -1,7 +1,7 @@
 <div class="form-group" show-errors>
   <h3>Available Classes</h3>
   <button type="button" ng-click="vm.addClass()" class="btn btn-default">Add Class</button>
-  <hr style="padding-bottom: 0px; margin-bottom: 0px;"/>
+  <hr style="margin-bottom: 8px;"/>
   <div ng-repeat="c in vm.configuration.classes"  ng-click="vm.toggleClassVisibility($index)">
 
     <div class="row" ng-show="classHidden[$index]">
@@ -42,7 +42,7 @@
         </div>
       </div>
 
-      <div class="row" ng-class="{'collapsed-entry': classHidden[$index], 'expanded-entry': !classHidden[$index] }">
+      <div class="row">
         <div class="col-sm-10">
           <label class="control-label" for="c.description">Class Description</label>
           <textarea name="enabled" ng-model="c.description" class="form-control" required
@@ -51,8 +51,37 @@
           </textarea>
         </div>
       </div>
-    </div>
-    <hr style="margin-top: 4px; margin-bottom: 4px;"/>
 
-  </div>
+      <div class="row">
+        <div class="col-xs-4 col-xs-offset-2" ng-click="$event.stopPropagation()" >
+          <div class="dropdown" dropdown>
+            <button type="button" class="btn btn-default" dropdown-toggle>
+              Add Proficiency Option <span class="caret"></span></button>
+              <ul class="dropdown-menu">
+                <li><a href dropdown-toggle
+                    ng-repeat="skill in vm.skillsAvailable"
+                    ng-click="vm.addSkill(skill, c)">{{skill}}</a></li>
+              </ul>
+          </div>
+        </div>
+        <div class="col-xs-4">
+          <button type="button" class="btn btn-default">Add Save Proficiency</button>
+        </div>
+      </div>
+      <div class="row">
+        <p><b>Save Proficiencies</b></p>
+        <span class="proficiency-tag" ng-repeat="save in c.saveProficiencies">
+          {{save}} <i class="fa fa-times-circle-o"></i>
+        </span>
+      </div>
+      <div class="row">
+        <p><b>Proficiency Options</b></p>
+        <span class="proficiency-tag" ng-repeat="skill in c.skillProficiencies">
+          {{skill}} <i class="fa fa-times-circle-o"></i>
+        </span>
+      </div>
+
+    </div>
+
+    <hr style="margin-top: 8px; margin-bottom: 8px">
 </div>
