--- a/modules/professions/client/views/form-profession.client.view.html
+++ b/modules/professions/client/views/form-profession.client.view.html
@@ -5,13 +5,65 @@
   <div class="col-md-12">
     <form name="vm.form.professionForm" class="form-horizontal" ng-submit="vm.save(vm.form.professionForm.$valid)" novalidate>
       <fieldset>
-        <div class="form-group" show-errors>
-          <label class="control-label" for="name">Name</label>
-          <input name="name" type="text" ng-model="vm.profession.name" id="name" class="form-control" placeholder="Name" required>
-          <div ng-messages="vm.form.professionForm.name.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Class name is required.</p>
+
+        <div class="row">
+          <div class="col-sm-5">
+            <label class="control-label" for="vm.profession.name">Class Name</label>
+            <input name="enabled"
+                  type="text"
+                  ng-model="vm.profession.name"
+                  class="form-control"
+                  required>
+          </div>
+
+        </div>
+
+        <div class="row">
+          <div class="col-sm-10">
+            <label class="control-label" for="vm.profession.description">Class Description</label>
+            <textarea name="enabled" ng-model="vm.profession.description" class="form-control" required
+              pleaceholder="Enter some information about this class (used in the Help Area for Character Creation)">
+            </textarea>
           </div>
         </div>
+
+        <div class="row">
+          <div class="col-xs-4 col-xs-offset-2">
+            <div class="dropdown" dropdown>
+              <button type="button" class="btn btn-default" dropdown-toggle>
+                Add Proficiency Option <span class="caret"></span></button>
+                <ul class="dropdown-menu">
+                  <li ng-repeat="skill in vm.skillsAvailable">
+                    <a href ng-click="vm.addSkill(skill)">{{skill}}</a></li>
+                </ul>
+            </div>
+          </div>
+          <div class="col-xs-4">
+            <div class="dropdown" dropdown>
+              <button type="button" class="btn btn-default" dropdown-toggle>
+                Add Save Proficiency<span class="caret"></span></button>
+                <ul class="dropdown-menu">
+                  <li ng-repeat="save in vm.abilitySaves">
+                    <a href ng-click="vm.addSaveProficiency(save)">{{save}}</a>
+                  </li>
+                </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <p><b>Save Proficiencies</b></p>
+          <p><span class="proficiency-tag" ng-repeat="save in vm.profession.saveProficiencies">
+            {{save}} <i class="fa fa-times-circle-o"></i>
+            </span></p>
+        </div>
+        <div class="row">
+          <p><b>Proficiency Options</b></p>
+          <p><span class="proficiency-tag" ng-repeat="skill in vm.profession.skillProficiencies">
+            {{skill}} <i class="fa fa-times-circle-o"></i>
+          </span></p>
+        </div>
+
         <div class="form-group">
           <button type="submit" class="btn btn-default">{{vm.profession._id ? 'Update' : 'Create'}}</button>
         </div>
